css fix newsletter block on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,9 @@ div.profile p {
     width: 100%;
     margin-bottom: 50px;
   }
+  div.two-columns > a.block.newsletter {
+    width: calc(100% - 50px);
+  }
 }
 
 .footer {
